# nerds_assistant

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
nerd_assistant/: chat_gpt.py
nerd_assistant/cli/: main.py
